# see https://github.com/karlicoss/pymplate for up-to-date reference
[project]
dynamic = ["version"]  # version is managed by build backend
name = "instapexport"
dependencies = [
    "instapexport[export]",  # TODO backwards compatibility -- remove later?
]
requires-python = ">=3.9"

## these need to be set if you're planning to upload to pypi
# description = "TODO"
# license = {file = "LICENSE"}
# authors = [
#     {name = "Dima Gerasimov (@karlicoss)", email = "karlicoss@gmail.com"},
# ]
# maintainers = [
#     {name = "Dima Gerasimov (@karlicoss)", email = "karlicoss@gmail.com"},
# ]
#
# [project.urls]
# Homepage = "https://github.com/karlicoss/pymplate"
##


[project.optional-dependencies]
dal = []
export = [
    # instapaper api (needed for export only)
    # my version has some changes not in the upstream yet..
    "instapaper @ git+https://github.com/karlicoss/instapaper.git",
    "pyutil",  # FIXME ugh. without it, oauth2 fails trying to use distutils... need to sync my fork with master
    # tbh oauth2 is like 10+ years old -- should completely migrate off it?

    "tenacity", # retrying api calls
]
optional = [
    "orjson",  # faster json processing
    "colorlog",
    "ijson",  # faster iterative json processing
]
[dependency-groups]
# TODO: not sure, on the one hand could just use 'standard' dev dependency group
# On the other hand, it's a bit annoying that it's always included by default? 
# To make sure it's not included, need to use `uv run --exact --no-default-groups ...`
testing = [
    "pytest",
    "ruff",
    "mypy",
    "lxml", # for mypy html coverage
    "ty>=0.0.1a15",
]


[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

# unfortunately have to duplicate project name here atm, see https://github.com/pypa/hatch/issues/1894
[tool.hatch.build.targets.wheel]
packages = ["src/instapexport"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
version_scheme = "python-simplified-semver"
local_scheme = "dirty-tag"

[tool.hatch.metadata]
# needed to allow direct git url for "instapaper" dependency
# NOTE: tool.uv.sources also works, but it would only work with uv, not pip
allow-direct-references = true
