# see https://github.com/karlicoss/pymplate for up-to-date reference
[project]
dynamic = ["version"]  # version is managed by build backend
name = "instapexport"
dependencies = [
    "instapexport[export]",  # TODO backwards compatibility -- remove later?
]
requires-python = ">=3.12"

## these are only useful for pypi
description = "Export your personal Instapaper data: bookmarked articles and highlights"  # shows on project page/in search
license     = {file = "LICENSE"}
authors     = [{name = "Dima Gerasimov (@karlicoss)", email = "karlicoss@gmail.com"}]
maintainers = [{name = "Dima Gerasimov (@karlicoss)", email = "karlicoss@gmail.com"}]

[project.urls]  # pypi will fetch some github stats/link, so somewhat useful
Homepage = "https://github.com/karlicoss/instapexport"
##


[project.optional-dependencies]
dal = []
export = [
    # instapaper api (needed for export only)
    # my version has some changes not in the upstream yet..
    "instapaper @ git+https://github.com/karlicoss/instapaper.git",
    "pyutil",  # FIXME ugh. without it, oauth2 fails trying to use distutils... need to sync my fork with master
    # tbh oauth2 is like 10+ years old -- should completely migrate off it?

    "tenacity", # retrying api calls
]
optional = [
    "orjson",  # faster json processing
    "colorlog",
    "ijson",  # faster iterative json processing
]

[dependency-groups]
# TODO: not sure, on the one hand could just use 'standard' dev dependency group
# On the other hand, it's a bit annoying that it's always included by default? 
# To make sure it's not included, need to use `uv run --exact --no-default-groups ...`
testing = [
    "pytest>=9",  # need version 9 for proper namespace package support
    "ruff",

    "instapexport[dal,export,optional]",
]
typecheck = [
    "mypy",
    "lxml", # for mypy html coverage
    "ty>=0.0.13",

    { include-group = "testing" },
]
quarto = [
    "quarto-cli",

    "instapexport[dal,export,optional]",
]



[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

# unfortunately have to duplicate project name here atm, see https://github.com/pypa/hatch/issues/1894
[tool.hatch.build.targets.wheel]
packages = ["src/instapexport"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
version_scheme = "python-simplified-semver"
local_scheme = "dirty-tag"

[tool.hatch.metadata]
# needed to allow direct git url for "instapaper" dependency
# NOTE: tool.uv.sources also works, but it would only work with uv, not pip
allow-direct-references = true
